--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <body>
     <header>
         <nav>
-            <div class="left">Viranch's Portfolio</div>
+            <div class="left">Viranch's Personal Portfolio</div>
             <div class="right">
                 <ul>
                     <li><a href="/">Home</a></li>
